[package]
name = "tfchain-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = "0.23.0"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
subxt-codegen = "0.23.0"
frame-metadata = "15.0.0"
syn = "1.0.99"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time"] }
futures-util = "0.3.23"
tracing-subscriber = "0.3.15"
futures = "0.3.23"
sp-keyring = "6.0.0"
sp-core = "6.0.0"
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-std =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-runtime =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
