[package]
name = "tfchain-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "tfchain_client"

[[bin]]
path = "src/main.rs"
name = "tfchain_cli"

[dependencies]
subxt = "0.23.0"
subxt-codegen = "0.23.0"
syn = "1.0.99"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time"] }
futures-util = "0.3.23"
tracing-subscriber = "0.3.15"
futures = "0.3.23"
serde = "1.0.147"

# Substrate dependencies
sp-core = "6.0.0"
frame-metadata = "15.0.0"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-std =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-runtime =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
regex = "1.6.0"
frame-system =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
pallet-balances =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }

# Tfchain dependencies
tfchain-support = { git = "https://github.com/threefoldtech/tfchain" }
